[gd_scene load_steps=5 format=2]

[ext_resource path="res://alien1.vox" type="ArrayMesh" id=1]
[ext_resource path="res://Alien1.gd" type="Script" id=2]
[ext_resource path="res://StateTimer.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( 2, 2.3, 2, 2, -1.7, 2, 2, 2.3, -2, -2, 2.3, 2, 2, -1.7, -2, -2, -1.7, 2, -2, 2.3, -2, -2, -1.7, -2 )

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 2 )

[node name="Spatial" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="StateTimer" type="Timer" parent="."]
script = ExtResource( 3 )

[node name="DashTimer" type="Timer" parent="."]

[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
